# ITKPerformanceBenchmarking

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  ITK_PerformanceTestingDriver.sh  README-asv.md  README.md  README.rst  RunWithVisualStudio.cmd  asv.conf.json  azure-pipelines.yml  circle.yml  evaluate-itk-performance.py  itk-module.cmake
.circleci/: config.yml
.github/workflows/: build-test-package.yml  build-test.yml
Benchmarks/: CMakeLists.txt
Benchmarks/ClockTest/: CMakeLists.txt  TimeTest.cxx  itkHighPriorityRealTimeProbeTest.cxx  itkHighPriorityRealTimeProbeTest2.cxx  itkHighPriorityRealTimeProbesCollectorTest.cxx  itkTimeProbeTest.cxx  itkTimeProbesCollectorTest.cxx
Benchmarks/Filtering/: CMakeLists.txt
Benchmarks/Registration/: CMakeLists.txt
Benchmarks/Segmentation/: CMakeLists.txt
Benchmarks/Utilities/: CMakeLists.txt  itkHighPriorityRealTimeClock.cxx  itkHighPriorityRealTimeClock.h  itkHighPriorityRealTimeProbe.cxx  itkHighPriorityRealTimeProbe.h  itkHighPriorityRealTimeProbeCollector.cxx  itkHighPriorityRealTimeProbeCollector.h  itkHighPriorityRealTimeProbesCollector.cxx  itkHighPriorityRealTimeProbesCollector.h
PerformanceBenchmarks/: CMakeLists.txt  itk-module.cmake
PerformanceBenchmarks/include/: itkHighPriorityRealTimeClock.h  itkHighPriorityRealTimeProbe.h  itkHighPriorityRealTimeProbesCollector.h  itkResourceExpandedProbe.h  itkResourceExpandedProbe.hxx  itkResourceExpandedProbesCollector.h  itkResourceExpandedProbesCollector.hxx  itkResourceProbe2.h  itkResourceProbe2.hxx
PerformanceBenchmarks/src/: CMakeLists.txt  itkHighPriorityRealTimeProbe.cxx  itkHighPriorityRealTimeProbesCollector.cxx
PerformanceBenchmarks/test/: CMakeLists.txt  itkHighPriorityRealTimeProbeTest.cxx  itkHighPriorityRealTimeProbesCollectorTest.cxx  itkHighPriorityRealTimeProbesCollectorTest3.cxx
benchmarks/: core.py  filtering.py  segmentation.py
doc/: ArticleExample.tex  ITKPerformanceBenchmarking.tex  InputBrainWeb.eps  InsightJournal.bib  Makefile
doc/FigureProcessorPriority/: ProcessorPriority.eps  plot.py
doc/FigureProcessorPriority/BuildWithHighPriority/: DemonsRegistrationBenchmark.tsv  GradientMagnitudeBenchmark.tsv  GradientMagnitudeBenchmark1Thread.tsv  LevelSetBenchmark.tsv  MedianBenchmark.tsv  MinMaxCurvatureFlowBenchmark.tsv  NormalizedCorrelationBenchmark.tsv  RegionGrowingBenchmark.tsv  RegistrationFrameworkBenchmark.tsv  WatershedBenchmark.tsv
doc/FigureProcessorPriority/BuildWithNormalPriority/: DemonsRegistrationBenchmark.tsv  GradientMagnitudeBenchmark.tsv  GradientMagnitudeBenchmark1Thread.tsv  LevelSetBenchmark.tsv  MedianBenchmark.tsv  MinMaxCurvatureFlowBenchmark.tsv  NormalizedCorrelationBenchmark.tsv  RegionGrowingBenchmark.tsv  RegistrationFrameworkBenchmark.tsv  WatershedBenchmark.tsv
doc/FigureProcessorPriority/NoBuildWithHighPriority/: DemonsRegistrationBenchmark.tsv  GradientMagnitudeBenchmark.tsv  GradientMagnitudeBenchmark1Thread.tsv  LevelSetBenchmark.tsv  MedianBenchmark.tsv  MinMaxCurvatureFlowBenchmark.tsv  NormalizedCorrelationBenchmark.tsv  RegionGrowingBenchmark.tsv  RegistrationFrameworkBenchmark.tsv  WatershedBenchmark.tsv
doc/FigureProcessorPriority/NoBuildWithNormalPriority/: DemonsRegistrationBenchmark.tsv  GradientMagnitudeBenchmark.tsv  GradientMagnitudeBenchmark1Thread.tsv  LevelSetBenchmark.tsv  MedianBenchmark.tsv  MinMaxCurvatureFlowBenchmark.tsv  NormalizedCorrelationBenchmark.tsv  RegionGrowingBenchmark.tsv  RegistrationFrameworkBenchmark.tsv  WatershedBenchmark.tsv
examples/: CMakeLists.txt  push_results_to_girder.py
examples/CMake/: ITKBenchmarksExternalData.cmake
examples/Core/: CMakeLists.txt  ThreadOverhead.cxx  itkCopyIterationBenchmark.cxx  itkVectorIterationBenchmark.cxx
examples/Data/Input/: .ExternalData_MD5_aa2025e24e24c4100d60569565d5246e  brainweb165a10f17.mha.cid  brainweb165a10f17translated-1x-1y1z.nrrd.cid  brainweb165a10f17translated-1x-1y1z.nrrd.md5  brainweb165a10f17translated-1x-1y1zextract88i5z.mha.cid  brainweb165a10f17translated-1x-1y1zextract88i5z.mha.md5  brainweb165a10f17translated-7x-8y9z.nrrd.cid  brainweb165a10f17translated-7x-8y9z.nrrd.md5
examples/Filtering/: Benchmark_FFTDirectInverse.cxx  BinaryAddBenchmark.cxx  CMakeLists.txt  GradientMagnitudeBenchmark.cxx  GradientMagnitudeRecursiveGaussianImageFilterBenchmark.cxx  MedianBenchmark.cxx  MedianImageFilterBenchmark.cxx  MinMaxCurvatureFlowBenchmark.cxx  MinMaxCurvatureFlowImageFilterBenchmark.cxx  ResampleBenchmark.cxx  UnaryAddBenchmark.cxx
examples/Registration/: CMakeLists.txt  DemonsRegistrationBenchmark.cxx  NormalizedCorrelationBenchmark.cxx  RegistrationFrameworkBenchmark.cxx
examples/Segmentation/: CMakeLists.txt  LevelSetBenchmark.cxx  MorphologicalWatershedBenchmark.cxx  RegionGrowingBenchmark.cxx  WatershedBenchmark.cxx
include/: LOCAL_itkResourceProbe.h  LOCAL_itkResourceProbe.hxx  LOCAL_itkResourceProbesCollectorBase.h  LOCAL_itkResourceProbesCollectorBase.hxx  PerformanceBenchmarkingUtilities.h  itkHighPriorityRealTimeClock.h  itkHighPriorityRealTimeProbe.h  itkHighPriorityRealTimeProbesCollector.h  jsonxx.h
python/: pyproject.toml
python/itk_perf_shim/: __init__.py  registry.py  runner.py
src/: CMakeLists.txt  PerformanceBenchmarkingInformation.cxx.in  PerformanceBenchmarkingInformation.h.in  PerformanceBenchmarkingUtilities.cxx  itkHighPriorityRealTimeClock.cxx  itkHighPriorityRealTimeProbe.cxx  itkHighPriorityRealTimeProbesCollector.cxx  jsonxx.cc
test/: CMakeLists.txt  PerformanceBenchmarkingInformationTest.cxx  itkHighPriorityRealTimeProbeTest.cxx  itkHighPriorityRealTimeProbesCollectorTest.cxx  itkTimeProbeTest2.cxx  itkTimeProbesTest2.cxx
test/Docker/: Dockerfile  build.sh  run.sh  test.sh
